[PATCH] Fixed checkmark spacing

--- a/src/scss/elements/_checkmark.scss
+++ b/src/scss/elements/_checkmark.scss
@@ -7,5 +7,5 @@
   width: 10px;
   height: 20px;
   transform: rotate(45deg);
-  margin-right: $grid-spacing;
+  margin-right: $grid-spacing / 2;
 }
